# petuh

./: .gitignore  .sops.yaml  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  application.yml  build.py  build_image.py  build_image.sh  deploy.yml  docker-compose.yml  hosts.ini  rust-toolchain.toml  typos.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: environment.rs  lib.rs  logging.rs  redis.rs  sentry.rs  setup.rs
infra/: Dockerfile  application.yml
infra/kube/: debug-pod.yml  kafka.yml  petuh-data.yml  petuh-llm.yml  petuh.yml  pg.yml
infra/secrets/: pg.enc.yml
kubernetes/: 0-pv.yaml  1-pvc.yaml  petuh-data.yml  petuh-llm.yml  petuh.yml  pg.yml
petuh/: Cargo.toml  Dockerfile
petuh-data/: Cargo.toml  Dockerfile
petuh-data/migrations/: 202507211517_add_saved_response.sql  202508201629_add_users.sql  202508201630_add_saved_response.sql  20250821115527_add_users.sql  20250821115555_add_chats.sql  20250821115654_add_saved_responses.sql  20250821115720_add_user_stats.sql
petuh-data/migrations/logs/: petuh-data.log.2025-08-21  petuh-data.log.2025-08-22  petuh-data.log.2025-08-23
petuh-data/src/: main.rs  service.rs
petuh-data/src/entities/: chat.rs  chat_kind.rs  mod.rs  model.rs  saved_response.rs  user.rs  user_stat.rs
petuh-llm/: Cargo.toml  Dockerfile  build.rs
petuh-llm/src/: chat_gpt.rs  main.rs  service.rs
petuh-responses/: Cargo.toml  Dockerfile
petuh-responses/src/: main.rs  service.rs
petuh-responses/src/entities/: model.rs  saved_response.rs
petuh-tests/: Cargo.toml
petuh-tests/src/: main.rs
petuh/src/: commands.rs  data.rs  llm.rs  main.rs  phrases.rs  responses.rs  text.rs  user_extension.rs  weather.rs  yayko.rs
proto/: petuh.proto
src/: chat_gpt.rs  main.rs  phrases.rs  saved_responses.rs  yayko.rs
tests/: Cargo.toml
tests/src/: main.rs
