[package]
edition.workspace = true
name = "common"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
