[package]
edition.workspace = true
name = "petuh-data"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
sercli = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

common = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
tonic-build = { workspace = true }
