[package]
edition.workspace = true
name = "petuh-llm"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
