[package]
edition.workspace = true
name = "petuh-responses"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sercli = { workspace = true }
sqlx = { workspace = true }


[build-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
sercli = { workspace = true }
tonic-build = { workspace = true }
