[package]
edition.workspace = true
name = "petuh-responses"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
prost = { workspace = true }
sentry = { workspace = true }
sercli = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
tonic-build = { workspace = true }
