[package]
edition.workspace = true
name = "petuh"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
fake = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

#store = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
